Added UserAssignment API endpoint And Permission for each Endpoint